--- a/styles/_logo.scss
+++ b/styles/_logo.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    z-index: 10;
     h1{
         margin-left: 10%;
         font-size: 3em;
